# bots2d

./: .gitignore  .gitmodules  BoxObstacle.h  CMakeLists.txt  Constants.h  ContactListener.cpp  Dohyo.cpp  Dohyo.h  LICENSE  LineDetector.cpp  README.md  RangeSensor.cpp  Sumobot4Wheel.cpp  Sumobot4Wheel.h  SumobotTest.cpp  SumobotTest.h  Wheel.cpp  Wheel.h  WheelMotor.cpp  WheelMotor.h  dc_motor_plot.py
.devcontainer/: Dockerfile  devcontainer.json
assets/: README.md
assets/objects/: README.md
assets/objects/actuators/: WheelMotor.cpp  WheelMotor.h
assets/objects/bodies/: GenericBody.cpp  GenericBody.h  SimpleBotBody.cpp  SimpleBotBody.h
docs/: Application_8h_source.html  AssetsHelper_8h_source.html  BaseBot_8h_source.html  Body2DUserData_8h_source.html  Body2D_8h_source.html  Bots2DTestApp_8h_source.html  Camera_8h_source.html  CircleComponent_8h_source.html  Component_8h_source.html  ContactListener_8h_source.html  ControllerComponent_8h_source.html  Doxyfile  DrawTestScene_8h_source.html  Event_8h_source.html  GLError_8h_source.html  HollowCircleComponent_8h_source.html  ImGuiOverlay_8h_source.html  IndexBuffer_8h_source.html  KeyboardController_8h_source.html  LineComponent_8h_source.html  LineDetectorObject_8h_source.html  LineDetector_8h_source.html  LineFollowerPath_8h_source.html  LineFollowerTestScene_8h_source.html  LineFollower_8h_source.html  LineObject_8h_source.html  MicrocontrollerCBinding_8h_source.html  MicrocontrollerSumobot4WheelExample_8h_source.html  Microcontroller_8h_source.html  PhysicsBotTestScene_8h_source.html  PhysicsComponent_8h_source.html  PhysicsTestScene_8h_source.html  PhysicsWorld_8h_source.html  QuadComponent_8h_source.html  QuadCoords_8h_source.html  QuadObject_8h_source.html  README.md  RangeSensorObject_8h_source.html  RangeSensor_8h_source.html  RectComponent_8h_source.html  (+223 more)
docs/doxygen/: Application_8h_source.html  CircleComponent_8h_source.html  CircleObject_8h_source.html  ControllerComponent_8h_source.html  Dohyo_8h_source.html  Event_8h_source.html  GLError_8h_source.html  GenericBody_8h_source.html  ImGuiOverlay_8h_source.html  LineComponent_8h_source.html  LineDetector_8h_source.html  LineFollowerTestScene_8h_source.html  MicrocontrollerCBinding_8h_source.html  QuadComponent_8h_source.html  RectComponent_8h_source.html  RectObject_8h_source.html  SimulatorApp_8h_source.html  SpriteAnimationTestScene_8h_source.html  SpriteAnimation_8h_source.html  SumobotTestScene_8h_source.html  TexCoords_8h_source.html  Texture_8h_source.html  Transforms_8h_source.html  VertexBufferLayout_8h_source.html  WheelMotorTestScene_8h_source.html  WheelMotor_8h_source.html  classBaseBot-members.html  classBody2D-members.html  classCamera.html  classCircleComponent.html  classCircleObject-members.html  classCircleTransform-members.html  classCircleTransform.html  classContactListener.html  classControllerComponent-members.html  classControllerComponent.html  classDohyo-members.html  classDrawTestScene-members.html  classEvent-members.html  classGenericBody-members.html  (+63 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_3.js  functions_0.js  (+13 more)
include/: Constants.h  ContactListener.h  RangeSensor.h  SimulatorApp.h  SumobotTest.h  WheelMotor.h
include/app/: README.md  SceneMenu.h  SimulatorApp.h
include/engine/: README.md
include/physics/: LineDetector.h
include/renderer/: GLError.h  Renderer.h  Shader.h  Texture.h  VertexBuffer.h
include/tests/: Test.h  TestClearColor.h  TestDrawBasicShapes.h
nsumoapp/: CMakeLists.txt  NsumoApp.cpp  NsumoApp.h  main.cpp
nsumoapp/controllers/NsumoController/: NsumoMicrocontroller.cpp  NsumoMicrocontroller.h  main.c  main_function.h  voltage_lines.h
nsumoapp/controllers/NsumoController/nsumo_simulated/: assert_handler.c  ir_remote.c  qre1113.c  tb6612fng.c  trace.c  vl53l0x.c
nsumoapp/scenes/: NsumoScene.cpp  NsumoScene.h
resources/: README.md
resources/shaders/: solid_color.shader  texture.shader
src/: Application.cpp  BoxObstacle.cpp  Dohyo.cpp  LineDetector.cpp  README.md  SimulatorApp.cpp  main.cpp  userdatasave.txt
src/app/: SceneMenu.cpp  SimulatorApp.cpp
src/controllers/: Microcontroller.cpp
src/core/: Application.cpp  Application.h  Component.h  Event.cpp  Event.h
src/physics/: Body2DUserData.h  ContactListener.h  PhysicsWorld.cpp  PhysicsWorld.h  Sumobot4Wheel.cpp  SumobotTest.cpp
src/renderer/: AssetsHelper.h  Camera.cpp  GLError.h  ImGuiMenu.cpp  ImGuiMenu.h  ImGuiOverlay.cpp  ImGuiOverlay.h  IndexBuffer.cpp  IndexBuffer.h  QuadCoords.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TexCoords.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h
src/scene/: Scene.cpp  Scene.h  SceneMenu.cpp  SceneMenu.h  SceneObject.cpp  SceneObject.h
src/tests/: Test.cpp  TestClearColor.cpp  TestDrawBasicShapes.cpp  dc_motor_plot.py
testapp/: Bots2DTestApp.cpp  Bots2DTestApp.h  CMakeLists.txt  README.md  SimulatorTestApp.cpp  SimulatorTestApp.h  main.cpp
testapp/controllers/NsumoController/: NsumoMicrocontroller.h  README.md  main.c  main_function.h  motor.c  voltage_lines.h
testapp/controllers/Sumobot4WheelExample/: CMicrocontrollerSumobot4WExample.cpp  CMicrocontrollerSumobot4WExample.h  MicrocontrollerSumobot4WheelExample.cpp  MicrocontrollerSumobot4WheelExample.h  c_bindings.h  main.c  main_function.h  motor.c
testapp/scenes/: DrawTestScene.h  LineFollowerTestScene.cpp  PhysicsBotTestScene.cpp  PhysicsBotTestScene.h  PhysicsTestScene.h  SpriteAnimationTestScene.h  SumobotTestScene.cpp  SumobotTestScene.h  WheelMotorTestScene.cpp  WheelMotorTestScene.h
tools/: README.md  buildscript.sh  dc_motor_plot.py
(+247 files in other folders)
